@@ -78,6 +78,8 @@ PHP                                                                        NEWS
   install location). (james dot cohen at digitalwindow dot com, Greg)
 - Fixed bug #48733 (CURLOPT_WRITEHEADER|CURLOPT_FILE|CURLOPT_STDERR warns on
   files that have been opened with r+). (Ilia)
+- Fixed bug #48719 (parse_ini_*(): scanner_mode parameter is not checked for
+  sanity). (Jani)
 - Fixed bug #48718 (FILTER_VALIDATE_EMAIL does not allow numbers in domain  
   components). (Ilia)
 - Fixed bug #48681 (openssl signature verification for tar archives broken).
